manifests/seraphim/prod/jellyfin/Deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
    app.kubernetes.io/version: 10.11.8
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/part-of: jellyfin
        app.kubernetes.io/version: 10.11.8
    spec:
      containers:
        - env: []
          image: ghcr.io/jellyfin/jellyfin:10.11.8
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /mnt/media/livetv
              name: livetv
            - mountPath: /mnt/media/movies
              name: movies
            - mountPath: /mnt/media/shows
              name: shows
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - emptyDir: {}
          name: cache
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: livetv
          nfs:
            path: /mnt/nami-01/media/livetv
            readOnly: false
            server: nami.int.scarey.me
        - name: movies
          nfs:
            path: /mnt/nami-01/media/movies
            readOnly: true
            server: nami.int.scarey.me
        - name: shows
          nfs:
            path: /mnt/nami-01/media/shows
            readOnly: true
            server: nami.int.scarey.me
