manifests/seraphim/prod/jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
    app.kubernetes.io/version: 10.11.8
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: jellyfin
