manifests/seraphim/prod/jellyfin/HTTPRoute-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: jellyfin
    app.kubernetes.io/version: 10.11.8
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
